; ModuleID = '/home/carl/AnghaBench/esp-idf/components/pthread/extr_pthread_local_storage.c_pthread_getspecific.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/pthread/extr_pthread_local_storage.c_pthread_getspecific.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8* }

@PTHREAD_TLS_INDEX = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @pthread_getspecific(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_3__*, align 8
  store i32 %0, i32* %3, align 4
  %6 = load i32, i32* @PTHREAD_TLS_INDEX, align 4
  %7 = call i64 @pvTaskGetThreadLocalStoragePointer(i32* null, i32 %6)
  %8 = inttoptr i64 %7 to i32*
  store i32* %8, i32** %4, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = icmp eq i32* %9, null
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  store i8* null, i8** %2, align 8
  br label %23

12:                                               ; preds = %1
  %13 = load i32*, i32** %4, align 8
  %14 = load i32, i32* %3, align 4
  %15 = call %struct.TYPE_3__* @find_value(i32* %13, i32 %14)
  store %struct.TYPE_3__* %15, %struct.TYPE_3__** %5, align 8
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %17 = icmp ne %struct.TYPE_3__* %16, null
  br i1 %17, label %18, label %22

18:                                               ; preds = %12
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 0
  %21 = load i8*, i8** %20, align 8
  store i8* %21, i8** %2, align 8
  br label %23

22:                                               ; preds = %12
  store i8* null, i8** %2, align 8
  br label %23

23:                                               ; preds = %22, %18, %11
  %24 = load i8*, i8** %2, align 8
  ret i8* %24
}

declare dso_local i64 @pvTaskGetThreadLocalStoragePointer(i32*, i32) #1

declare dso_local %struct.TYPE_3__* @find_value(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
